Fix for bleeding model selector

--- a/app/static/rightpanel.css
+++ b/app/static/rightpanel.css
@@ -534,7 +534,7 @@ button.shadow-button:hover {
     position: absolute;
     top: 65px;
     right: 12px;
-    z-index: 999;
+    /* z-index: 999; */
     display: inline-flex;
     align-items: center;
     cursor: pointer;
